# chat-resume

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.local.md  CLAUDE.md  README.md  TTS_INTEGRATION.md  backend.sh  docker-compose.observability.yml  frontend.sh  lsp.yml  old_page.tsx  old_page2.tsx  page_log.txt  pyrightconfig.json  railway.json  replace_prompt.py  restart.sh  scratch_refactor.py  start-backend.sh  start-frontend.sh  temp.tsx  test_asr_frontend.html  test_tts_frontend.html
backend/: .env.example  ASR_USAGE.md  UV_GUIDE.md  VOLCENGINE_SETUP_GUIDE.md  __init__.py  alembic.ini  debug_config.py  debug_raw_message.py  debug_service_detailed.py  debug_websocket.py  debug_websocket_fixed.py  nixpacks.toml  pyproject.toml  pyrightconfig.json  quick_fix_401.py  requirements.txt  run.py  test_api_key.py  test_asr.py  test_asr_config.py  test_asr_connection.py  test_interview_agent.py  test_logging.py  test_openai_tools.py  test_openrouter.py  test_tools.json  test_tts.py
backend/alembic/: env.py
backend/alembic/versions/: 00c3a1040972_add_jobrecommendation_and_jobmatchreport.py  0f4e3d2c1b0a_add_provider_identities.py  1a2b3c4d5e6f_add_billing_subscriptions.py  2b4c6d8e0f12_add_resume_upload_jobs.py  37709f35dbe6_add_enterprise_models.py  3c4d5e6f7a8b_add_password_reset_tokens.py  4a4ac436dcaa_add_learningpathversion_table.py  5d92e5c7bc1e_add_interview_configuration_fields.py  7445f3b0d307_initial_migration.py  8b6de8920f32_add_overall_score_to_interview_sessions.py  a1b2c3d4e5f6_add_layout_config_to_resumes.py  a1b2c3d4e5f6_normalize_interview_tables_schema.py  a8d672decd64_add_report_data_field_to_interview_.py  add_performance_indexes.py  b1c2d3e4f5a6_add_interview_turns_table.py  b977827be5be_add_user_role.py  c3a1f8d4b901_add_resume_proposals_table.py  c3f4e5a6b7c8_drop_unused_interview_scores.py  c4d5e6f7a8b9_drop_resume_proposals_table.py  d4e2f1a3b567_add_resume_chat_messages_table.py  d74681f33876_add_stream_events_to_chat_messages.py  d9e0f1a2b3c4_merge_interview_and_agent_heads.py  e1f2a3b4c5d6_add_agent_sessions_and_events.py  e7f8a9b0c1d2_add_agent_runs_and_run_events.py  f1a2b3c4d5e6_add_refresh_sessions_table.py  f2b1c4d5e6f7_upgrade_legacy_interview_schema.py  f8a9b0c1d2e3_drop_agent_runs_and_run_events.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: api.py  deps.py
backend/app/core/: config.py  database.py  prompts.py  security.py
backend/app/entrypoints/: __init__.py  agent_sdk.py
backend/app/infra/: __init__.py  config.py  database.py  db_observability.py  db_request_logging.py  langfuse_observer.py  langfuse_setup.py  langsmith_observer.py  langsmith_setup.py  logging_setup.py  otel_setup.py  prometheus_metrics.py  request_context.py  security.py  sentry_setup.py  warnings_setup.py
backend/app/models/: __init__.py  agent_session.py  billing.py  enterprise.py  interview.py  job.py  learning_path.py  refresh_session.py  resume.py  user.py
backend/app/prompt/: __init__.py  interview_prompts.py  resume_prompts.py
backend/app/prompts/: __init__.py  loader.py
backend/app/runtime/: __init__.py  contracts.py  deepagents_confirmation.py  deepagents_event_adapter.py  deepagents_profile.py  deepagents_runtime.py  deepagents_tool_adapter.py  harness.py  loop.py  openrouter_adapter.py  permissions.py  pi_agent_openrouter.py  pi_agent_runtime.py  react_turn_runner.py  recovery.py  resume_agent_session.py  runtime_event_adapter.py  session_sweeper.py  tool_confirmation.py  tool_execution_pipeline.py  (+1 more)
backend/scripts/: run_resume_agent_smoke.py
backend/tests/: test_agent_harness.py  test_agent_session_store.py  test_api_e2e.py  test_billing_webhook_idempotency.py  test_config_security.py  test_eval_analyzer.py  test_eval_case_validation.py  test_eval_score.py  test_eval_trend_comparison.py  test_evidence_report.py  test_export_service.py  test_google_identity_link_service.py  test_google_oauth_client.py  test_greeting_prologue.py  test_interview_turns.py  test_interviewer_agent.py  test_jd_ocr_service.py  test_job_match_summary.py  test_local_observability_stack.py  test_logging_setup.py  test_oauth_state_service.py  test_observability_setup.py  test_openrouter_retry.py  test_paypal_billing_service.py  test_react_turn_runner.py  test_request_logging.py  test_request_observability.py  test_resume_agent.py  test_resume_agent_runtime_boundaries.py  test_resume_agent_session_coordinator.py  test_resume_agent_session_service.py  test_resume_agent_smoke.py  test_resume_agent_sse_cursor.py  test_resume_parser.py  test_resume_schema_normalization.py  test_resume_tool_executor.py  test_resume_upload_job_processor.py  test_runtime_event_publisher.py  test_session_sweeper.py  test_tool_execution_pipeline.py  (+3 more)
(+466 files in other folders)
