[project]
name = "chat-resume-backend"
version = "0.1.0"
description = "Chat Resume Backend API"
dependencies = [
    "fastapi",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.6.1",
    "email-validator==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.6",
    "PyPDF2==3.0.1",
    "pdfplumber==0.10.3",
    "python-docx==1.1.0",
    "spacy==3.7.2",
    "openai>=1.3.7",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
    "reportlab==4.0.7",
    "websockets==12.0",
    "volcengine-python-sdk==1.0.95",
    "ty>=0.0.1a24",
    "pycryptodome>=3.23.0",
    "playwright>=1.57.0",
    "fastmcp==0.4.1",
    "rich>=14.2.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pyright]
# 忽略缺失的导入
reportMissingImports = false
# 或者只忽略特定的模块
reportMissingModuleSource = false
