[project]
name = "chat-resume-backend"
version = "0.1.0"
description = "Chat Resume Backend API"
dependencies = [
    "fastapi",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.6.1",
    "email-validator==2.1.0",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.27",
    "PyPDF2==3.0.1",
    "pdfplumber>=0.11.8",
    "python-docx==1.1.0",
    "spacy==3.7.2",
    "openai>=1.3.7",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
    "reportlab==4.0.7",
    "websockets>=13.0.0",
    "volcengine-python-sdk==1.0.95",
    "ty>=0.0.1a24",
    "pycryptodome>=3.23.0",
    "playwright>=1.57.0",
    "fastmcp>=3.2.0",
    "rich>=14.2.0",
    "sentry-sdk[fastapi]>=2.44.0",
    "langfuse>=4.2.0",
    "deepagents>=0.5.8",
    "langchain-openai>=1.2.1",
    "loguru>=0.7.3",
    "mako>=1.3.12",
    "lxml>=6.1.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/infra/database.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "pyright>=1.1.408",
]
